crates/wac-parser/tests/resolution/fail/redefined-name.wac
package test:comp;

type x = u32;
type x = string;